# aiopypiserver

./: .gitignore  BUILD.md  README.md  pyproject.toml  setup.cfg
src/aiopypiserver/: __init__.py  __main__.py  webserver.py
src/aiopypiserver/assets/: index.html
tests/: test_assets.py  test_main.py
