[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiopypiserver"
version = "0.0.0"
authors = [
    {name="Jamie Walton"}
]
description = "Do what pypiserver does, but with aiohttp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp == 3.8.*"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]